# simples-motor-vulkan

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  utilidades.sh
.github/workflows/: cmake.yml  codigos-ci.yml
cmake/modules/: AddShaderLibrary.cmake
códigos/0-ola_mundo/: CMakeLists.txt
códigos/0-ola_mundo/src/: main.cpp
códigos/1-codigo_base_1/src/: main.cpp
códigos/1-primeiro_compute_shader/src/: CMakeLists.txt  main.cpp
códigos/10-recriando_swapchain/src/: main.cpp
códigos/10-z_buffer/src/: main.cpp
códigos/11-textura/shaders/: shader.frag
códigos/11-textura/src/: main.cpp
códigos/12-modelo/src/: main.cpp
códigos/12-textura/libs/stb/: CMakeLists.txt
códigos/12-textura/shaders/: shader.frag
códigos/12-textura/src/: main.cpp
códigos/13-cena_animada/res/: CMakeLists.txt
códigos/13-cena_animada/src/: main.cpp
códigos/13-modelo/libs/tinyobjloader/: CMakeLists.txt
códigos/13-modelo/src/: main.cpp
códigos/14-cena_animada/shaders/: shader.vert
códigos/15-codigo_reestruturado_wip/shaders/: shader.frag
códigos/15-codigo_reestruturado_wip/src/: CMakeLists.txt  main.cpp
códigos/2-preto_e_branco/src/: CMakeLists.txt  main.cpp
códigos/2-primeiro_compute_shader/shaders/: filtro.comp
códigos/2-primeiro_compute_shader/src/: CMakeLists.txt
códigos/3-codigo_base/src/: main.cpp
códigos/3-preto_e_branco/shaders/: filtro.comp
códigos/3-preto_e_branco/src/: main.cpp
códigos/4-codigo_base_2/src/: main.cpp
códigos/5-entrada_dinamica/shaders/: shader.frag
códigos/5-proj_ortografica/cmake/modules/: AddShaderLibrary.cmake
códigos/5-proj_ortografica/src/: main.cpp
códigos/5-triangulo_simples/src/: main.cpp
códigos/6-cena_basica/src/: main.cpp
códigos/6-entrada_dinamica/shaders/: shader.vert
códigos/6-entrada_dinamica/src/: main.cpp
códigos/6-proj_perspectiva/src/: main.cpp
códigos/6-triangulo_simples/shaders/: shader.vert
códigos/6-triangulo_simples/src/: main.cpp
códigos/7-entrada_dinamica/shaders/: CMakeLists.txt
códigos/7-proj_ortografica/shaders/: shader.vert
códigos/7-proj_ortografica/src/: CMakeLists.txt  main.cpp
códigos/7-z_buffer/src/: main.cpp
códigos/8-proj_ortografica/src/: main.cpp
códigos/8-proj_perspectiva/src/: main.cpp
códigos/8-recriando_swapchain/src/: main.cpp
códigos/9-proj_perspectiva/src/: main.cpp
códigos/9-z_buffer/src/: main.cpp
libs/: CMakeLists.txt
libs/stb_image/: CMakeLists.txt
shaders/: filtro.comp  shader.frag  shader.vert
src/: CMakeLists.txt  main.cpp
src/shader/: CMakeLists.txt  filtro.comp
src/shaders/: CMakeLists.txt
